Enhance README with project details and instructions
Added detailed project description, features, tech stack, installation instructions, and usage guide to README.